[gd_scene load_steps=16 format=3 uid="uid://tnxg6bunsip5"]

[ext_resource type="Script" path="res://game/actors/characters/player/player.gd" id="1_typkr"]
[ext_resource type="PackedScene" uid="uid://bjsh2h78atl7l" path="res://game/components/camera/first_person_camera/first_person_camera.tscn" id="2_i8tmr"]
[ext_resource type="Script" path="res://game/game_logic/info_area_logic.gd" id="3_0jyse"]
[ext_resource type="Script" path="res://game/components/mouselook/mouselook.gd" id="3_cr7dd"]
[ext_resource type="Script" path="res://game/components/stair_check/stair_check.gd" id="4_0ro7h"]
[ext_resource type="Script" path="res://game/components/movement_system/movement_system.gd" id="4_4ji8x"]
[ext_resource type="Script" path="res://game/components/attributes/attributes.gd" id="4_4800i"]
[ext_resource type="Script" path="res://game/components/jump/jump.gd" id="5_a2i8e"]
[ext_resource type="Script" path="res://game/components/health_system/health_system.gd" id="7_e42kj"]
[ext_resource type="Script" path="res://game/components/shoot/shoot.gd" id="8_ok1uf"]
[ext_resource type="Script" path="res://game/components/inventory/inventory.gd" id="9_227m8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s8q7m"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dpf4e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nim2v"]
size = Vector3(10, 5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_kjr74"]
size = Vector3(1, 1.80688, 0.657227)

[node name="player" type="CharacterBody3D" groups=["player_character"]]
floor_max_angle = 1.0472
script = ExtResource("1_typkr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_s8q7m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_dpf4e")
skeleton = NodePath("../..")

[node name="first_person_camera" parent="." instance=ExtResource("2_i8tmr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.527907, 0.272962)
current = true

[node name="aim_ray" type="RayCast3D" parent="first_person_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.140229, -0.861108)
visible = false
target_position = Vector3(0, 0, -2)

[node name="info_ray" type="RayCast3D" parent="first_person_camera"]
visible = false

[node name="projectile_anchor" type="Marker3D" parent="first_person_camera"]
transform = Transform3D(1, 0, 0, 0, 0.998714, 0.0506975, 0, -0.0506975, 0.998714, 0, -0.277196, -1.93044)

[node name="wake_up_area" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="wake_up_area"]
shape = SubResource("BoxShape3D_nim2v")

[node name="info_area" type="Area3D" parent="."]
visible = false
script = ExtResource("3_0jyse")

[node name="CollisionShape3D" type="CollisionShape3D" parent="info_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0853271, -0.828613)
shape = SubResource("BoxShape3D_kjr74")

[node name="stair_check" type="Node3D" parent="."]
script = ExtResource("4_0ro7h")

[node name="upper" type="RayCast3D" parent="stair_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.336203, -0.442678)
target_position = Vector3(0, 0, -0.4)

[node name="lower" type="RayCast3D" parent="stair_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.831034, -0.438333)
target_position = Vector3(0, 0, -0.2)

[node name="attributes" type="Node" parent="."]
script = ExtResource("4_4800i")

[node name="mouselook" type="Node" parent="."]
script = ExtResource("3_cr7dd")

[node name="movement_system" type="Node" parent="."]
script = ExtResource("4_4ji8x")
check_for_fall_damage = true

[node name="jump" type="Node" parent="."]
script = ExtResource("5_a2i8e")

[node name="health_system" type="Node" parent="."]
script = ExtResource("7_e42kj")

[node name="shoot" type="Node" parent="."]
script = ExtResource("8_ok1uf")

[node name="inventory" type="Node" parent="."]
script = ExtResource("9_227m8")

[connection signal="body_entered" from="wake_up_area" to="." method="_on_wake_up_area_body_entered"]
[connection signal="area_entered" from="info_area" to="info_area" method="_on_area_entered"]
[connection signal="area_exited" from="info_area" to="info_area" method="_on_area_exited"]
[connection signal="body_entered" from="info_area" to="info_area" method="_on_body_entered"]
[connection signal="body_exited" from="info_area" to="info_area" method="_on_body_exited"]
[connection signal="fall_damage" from="movement_system" to="." method="_take_fall_damage"]
[connection signal="health_changed" from="health_system" to="." method="_on_health_system_health_changed"]
